welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:11: error: value && is not a member of Unit
    marquerSol() && gauche();
                 ^PatternPicture:23: error: value && is not a member of Unit
  marquerSol() && gauche();
               ^